--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,8 +62,11 @@
     <string name="signin_by_google">SignIn By Google</string>
 
     <string name="bo_suu_tap">Bộ sưu tập</string>
+    <string name="chapter">Chapter</string>
 
     <string name="action_settings">Settings</string>
+    <string name="msg_login_failed">Đăng nhập không thành công! </string>
+    <string name="title_activity_main2">Main2Activity</string>
 
 
 </resources>
