--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="thanks_label">Cảm ơn bạn đã phản hồi cho chúng tôi !</string>
     <string name="search">Search ...</string>
     <string name="type_some_text">Nhập tìm kiếm...</string>
+    <string name="comment_some_text">Bình luận...</string>
     <string name="ho_tro_tim_truyen">Hỗ trợ tìm truyện </string>
     <string name="yeu_cau_tim_truyen">Bạn muốn tìm truyện gì? </string>
 
